force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/sked_CollectionOperationOptimizerSetting__c.object-meta.xml
<CustomObject>
    <label>Collection Operation Optimizer Setting</label>
    <nameField>
        <displayFormat>COOS-{0000}</displayFormat>
        <label>Collection Operation Optimizer Setting N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Operation Optimizer Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>