force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/fields/sked_Default_Weight__c.field-meta.xml
<CustomField>
    <fullName>sked_Default_Weight__c</fullName>
    <label>Default Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Optimizer_Scoring_Factor</valueSetName>
    </valueSet>
</CustomField>