force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/fields/sked_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>sked_Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>