force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/fields/sked_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Display_Type__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>