force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/fields/sked_Enabled__c.field-meta.xml
<CustomField>
    <fullName>sked_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>