force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/fields/sked_Optimization_Run__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimization_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optimization Run</label>
    <referenceTo>sked_Optimization_Run__c</referenceTo>
    <relationshipLabel>Collection Operation Optimizer Settings</relationshipLabel>
    <relationshipName>sked_CollectionOpOptimizerSettings</relationshipName>
    <type>Lookup</type>
</CustomField>