force-app/main/default/objects/sked_CollectionOperationOptimizerSetting__c/fields/sked_Optimizer_Mapped_Weight__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimizer_Mapped_Weight__c</fullName>
    <label>Optimizer Mapped Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>